<resources>
    <string name="app_name">MVVM</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email Id</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_title">Event Title</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="location">Location:</string>

</resources>