<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="ViewModel"
            type="com.himanshu.mvvm.ui.auth.AuthViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp"
        >

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:text="@={ViewModel.email}"
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:padding="8dp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:autofillHints="abc@gmail.com"
                android:inputType="text" />

            <EditText
                android:text="@={ViewModel.password}"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="8dp"
                android:layout_below="@id/etUsername"
                android:layout_marginBottom="16dp"
                android:autofillHints="******"
                android:inputType="textPassword" />

            <Button
                android:onClick="@{ViewModel::onLoginButtonClicked}"
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#008577"
                android:layout_below="@id/etPassword"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:padding="8dp"
                android:layout_below="@id/btnLogin"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btnSignUp"
                android:onClick="@{ViewModel::onSignup}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#6200EE"
                android:layout_below="@id/tvForgotPassword" />

        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
